# haskell-neural-networks

./: LICENSE  README.org  flake.nix  haskell-neural-networks.cabal
.github/workflows/: haskell-cabal.yml  haskell-nix.yml  haskell.yml
app/: Main.hs  NeuralNetwork.hs
benchmark/: Main.hs
